--- a/alpha-minecraft.html
+++ b/alpha-minecraft.html
@@ -1,37 +1,43 @@
 <!DOCTYPE html>
+
 <head>
-<link rel="stylesheet"
-href="owo.css" />
+   <link rel="stylesheet" href="owo.css" />
 
-<h1>
-   <style>
-   h1{
-      color:rgb(200, 75, 75)
-   }   
-      </style>
-   Minecraft - Alpha
-</h1>
+   
+      <style>
+         h1 {
+            color: rgb(200, 75, 75)
+         }
+      </style>  
 </head>
+
 <body>
-<p>Alpha is the fifth phase in the development cycle of Minecraft, after
- Infdev. There was only one type of game mode playable in this version
- —Survival— and was the fourth Minecraft development stage to have some
- of its versions released to the public.During the Alpha phase,
-  Minecraft was updated very frequently due to Notch working full-time on
- Minecraft since June 1, 2010, and having a small company made later
-(Mojang). Bug fixes and tweaks could happen throughout the week,
- appearing on the game's development blog, with major additions and
-  changes appearing in 'Seecret' Friday updates, leaving the game's
-   players to discover the included new features.
-On December 11, 2010, Notch announced that the game would enter the Beta
- stage of development on December 20, 2010, at which point the price
-  would increase to €14.95.</p>
+   <header>
+      <h1>
+         Minecraft - Alpha
+      </h1>
+      <a href="history.html">Back</a>
+   </header>
+   <p>Alpha is the fifth phase in the development cycle of Minecraft, after
+      Infdev. There was only one type of game mode playable in this version
+      —Survival— and was the fourth Minecraft development stage to have some
+      of its versions released to the public.During the Alpha phase,
+      Minecraft was updated very frequently due to Notch working full-time on
+      Minecraft since June 1, 2010, and having a small company made later
+      (Mojang). Bug fixes and tweaks could happen throughout the week,
+      appearing on the game's development blog, with major additions and
+      changes appearing in 'Seecret' Friday updates, leaving the game's
+      players to discover the included new features.
+      On December 11, 2010, Notch announced that the game would enter the Beta
+      stage of development on December 20, 2010, at which point the price
+      would increase to €14.95.</p>
 
-<img src="Alpha.png" alt="Alpha Minecraft Photo" width=1000 length=500>
-<p></p>
-<a href="history.html">Back</a>
+   <img src="Alpha.png" alt="Alpha Minecraft Photo" width=1000 length=500>
+   <p></p>
+   <a href="history.html">Back</a>
+   
 
 
 
- 
+
 </body>
